# rag-agentic-template

./: .coverage  .env.example  .gitignore  .trigger3  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.venv_check/: pyvenv.cfg
evaluation/: run_ragas.py
examples/: quickstart.py
src/: config.py  loader.py  observability.py
src/advanced/: pipeline.py
src/agentic/: pipeline.py
src/naive/: pipeline.py
tests/: test_pipeline.py
