[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rag-agentic-template"
version = "0.1.0"
description = "Naive → Advanced → Agentic — A evolução prática do RAG em produção"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Rodolfo Barbosa", email = "rodolfo@dtsqd.com" },
]
dependencies = [
  "langchain>=0.3",
  "langchain-openai>=0.3",
  "langchain-community>=0.3",
  "langgraph>=0.4",
  "chromadb>=0.6",
  "langfuse>=2.60",
  "ragas>=0.2",
  "pypdf>=5",
  "tiktoken>=0.9",
]

[project.urls]
Repository = "https://github.com/generalrodolfao/rag-agentic-template"
